--- a/html-css/week3/css/style.css
+++ b/html-css/week3/css/style.css
@@ -14,6 +14,36 @@ header .logo {
     grid-gap: 1em;
 }
 
-.left, .right {
+.left, 
+.right {
     border: 1px solid #000;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 60% auto;
+    background-color: #01689b;
+    min-height: 70px;
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+nav .home > a {
+    display: inline-block;
+    padding: 25px 0 25px 25px;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+}
+
+ul,
+li {
+    padding: 10px;
+    list-style: none;
+}
+
+nav li {
+    display: inline;
 }
