--- a/html-css/week2/css/style.css
+++ b/html-css/week2/css/style.css
@@ -1,31 +1,149 @@
-#grid-floats {
-    float: left;
-}
 
-#grid-floats .grid-item {
-    width: 100%;
-    float: left;
-    padding: 10px;
-}
+  img {
+	width: 100%;
+	}
 
-img {
-    width: 100%;
-}
+  ul,
+  ol {
+	  margin:0;
+	  padding: 0;
+	  list-style: none;
+  }
 
-#grid-flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  .grid-item {
+	border: 1px solid black;
 }
 
 
-@media(min-width: 1024px) {
-    #grid-floats .grid-item,
+  /*FLOAT SETUP*/
+
+
+  #grid-floats .grid-item {
+	float: left; 
+	width: 46%;
+	padding: 10px;
+	/*margin: 0 10px 10px;*/
+  }
+
+  #grid-floats .grid-item:first-child {
+	width: 100%;
+	/*margin-left: 0;*/
+  }
+
+
+  #grid-floats .grid-item:last-child {
+	
+	margin-right: 0;
+  }
+  
+
+
+	#grid-floats:after {
+		
+			content: ".";
+			display: block;
+			height: 0;
+			clear: both;
+			visibility: hidden;		
+	}
+
+
+
+/*FLEX SETUP*/
+	#grid-flex {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+
+		}
+
     #grid-flex .grid-item{
-        width: 30%;
-        margin: 0 5px;
-        
-    }
+		margin: 0 10px;
+		padding: 10px;
+		width: 23%;
+	}
 
-    
-}
+	#grid-flex .grid-item {
+		width: 23%;
+		padding: 10px;
+		margin-bottom: 10px;
+	}
+   
+	/*#grid-flex .grid-item:first-child {
+		width: 43%;
+		margin-left: 0;
+	}
+	
+
+		
+		/* RESPONSIVE FLEX & FLOAT*/
+
+		/*@media(min-width: 670px) {
+
+			#grid-float .grid-item {
+				width: 20%;
+			}
+
+		 #grid-flex .grid-item:first-child {
+		width: 100%
+
+		 }
+		 #grid-flex .grid-item {
+		width: 43%;
+		 }
+
+    }
+*/
+		@media(min-width: 920px) {
+			
+			#grid-floats .grid-item:first-child {
+				width: 48%;
+			}
+				
+			#grid-floats .grid-item:nth-child(2) {
+				width: 47%;
+			}
+			#grid-floats .grid-item{
+				width: 30%;
+			}
+		}
+
+	/*	@media(min-width: 1024px) {
+
+
+			#grid-floats .grid-item {
+				width: 20%;
+			}
+
+
+			#grid-floats .grid-item:first-child {
+				width: 38%;
+			}
+				
+			#grid-floats .grid-item:nth-child(3n+4) {
+				clear: left;
+				margin-left: 0;
+			}
+
+			#grid-floats .grid-item:nth-child(3n+4),
+			#grid-floats .grid-item:nth-child(3n+5),
+			#grid-floats .grid-item:nth-child(3n+6) {
+				width: 25%;
+			}
+
+		 #grid-flex .grid-item{
+			 width:  21%;
+		 }
+
+
+
+		}
+		
+		@media(min-width: 1366px) {
+			
+			
+		}
+
+		@media(min-width: 1920px) {
+			
+		}
